# open-eaggr

./: .gitignore  CMakeLists.txt  Makefile  cmake-format.yaml
EAGGR/: CMakeLists.txt
EAGGRTestHarness/: CMakeLists.txt
